// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animal Form renders add if no animal prop 1`] = `
<AnimalForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="name"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          name
          :
          <input
            name="name"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="type"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          type
          :
          <input
            name="type"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button>
        Add
      </button>
    </p>
  </form>
</AnimalForm>
`;

exports[`Animal Form renders add if no animal prop 2`] = `
<AnimalForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "name": "felix",
            "type": "cat",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="name"
      onChange={[Function]}
      value="felix"
    >
      <p>
        <label>
          name
          :
          <input
            name="name"
            onChange={[Function]}
            required={true}
            value="felix"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="type"
      onChange={[Function]}
      value="cat"
    >
      <p>
        <label>
          type
          :
          <input
            name="type"
            onChange={[Function]}
            required={true}
            value="cat"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button>
        Add
      </button>
    </p>
  </form>
</AnimalForm>
`;
